AILS client services are now available on Android via Felix Dependency Manager
The build.grade file includes the bundles (generated jar files) of the client
JavaDoc for the MainActivity and OSGiActivity have also been added.

--- a/org.inaetics.ails.android/app/build.gradle
+++ b/org.inaetics.ails.android/app/build.gradle
@@ -42,5 +42,8 @@ dependencies {
     compile 'org.apache.felix:org.apache.felix.dependencymanager:4.2.0'
     compile 'org.apache.felix:org.apache.felix.framework:5.4.0'
 
-    compile fileTree(dir: '../../org.inaetics.ails.api/generated', include: '*.jar')
+    compile fileTree(dir: '../../org.inaetics.ails.api/generated',
+            include: 'org.inaetics.ails.api.common.model.jar')
+    compile fileTree(dir: '../../org.inaetics.ails.impl/generated',
+            include: 'org.inaetics.ails.impl.client.*.jar')
 }
