--- a/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
+++ b/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
@@ -17,4 +17,6 @@
         </activity>
     </application>
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+
 </manifest>
