--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-/.gradle/
-/.recommenders/
-/reports/
-/generated/
-.metadata/
-build
+.classpath
 .project
 .settings
-.classpath
+.metadata/
+/.gradle/
+/.recommenders/
+/build/
 /cnf/releaserepo
+/generated/
+/reports/
