--- a/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
+++ b/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.inaetics.ails.android">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -11,11 +13,12 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".SecondActivity">
+        </activity>
     </application>
-
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 
 </manifest>
