--- a/org.inaetics.ails.android/app/build.gradle
+++ b/org.inaetics.ails.android/app/build.gradle
@@ -3,10 +3,9 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "org.inaetics.ails.android"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,6 +25,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    productFlavors {
+    }
 }
 
 configurations {
@@ -34,20 +35,20 @@ configurations {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
 
-    compile group: 'com.google.guava', name: 'guava', version: '18.0'
-
-    compile fileTree(dir: '../../org.inaetics.ails.api/generated',
-            include: 'org.inaetics.ails.api.server.*.jar')
-    compile fileTree(dir: '../../org.inaetics.ails.api/generated',
-            include: 'org.inaetics.ails.api.common.model.jar')
-    compile fileTree(dir: '../../org.inaetics.ails.impl/generated',
-            include: 'org.inaetics.ails.impl.client.*.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'org.apache.felix:org.apache.felix.dependencymanager:4.2.0'
-    compile 'org.apache.felix:org.apache.felix.framework:5.4.0'
-    compile 'org.apache.felix:org.apache.felix.configadmin:1.0.1'
     compile 'com.android.support:design:23.1.1'
+
+    compile 'com.google.guava:guava:18.0'
+
+    compile 'org.apache.felix:org.apache.felix.framework:5.4.0'
+    compile 'org.apache.felix:org.apache.felix.dependencymanager:4.2.0'
+    //    compile 'org.apache.felix:org.apache.felix.configadmin:1.0.1'
+
+    compile fileTree(include: 'org.inaetics.ails.api.server.*.jar', dir: '../../org.inaetics.ails.api/generated')
+    compile fileTree(include: 'org.inaetics.ails.api.common.model.jar', dir: '../../org.inaetics.ails.api/generated')
+    compile fileTree(include: 'org.inaetics.ails.api.client.exceptions.jar', dir: '../../org.inaetics.ails.api/generated')
+    compile fileTree(include: 'org.inaetics.ails.impl.client.*.jar', dir: '../../org.inaetics.ails.impl/generated')
 }
