--- a/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
+++ b/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
@@ -13,11 +13,10 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".SecondActivity">
+        <activity android:name=".RegisterActivity">
         </activity>
     </application>
 
