--- a/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
+++ b/org.inaetics.ails.android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity">
+        <activity
+                android:name=".RegisterActivity"
+                android:label="@string/title_activity_register">
         </activity>
     </application>
 
